# GitKop

./: .gitignore  .gitmodules  GitKop.asc  README.md  cale.txt  circuit-20240205-0157.circuitjs.txt
.github/workflows/: document.yml  prez.yml
Altium/: .gitignore
Altium/GitKop/: Constraints.xml  GitKop.PrjPcb  GitKop.SchDoc
KiCad/: GitKop.kicad_pro  fp-lib-table
KiCad/GitKop/: GitKop-NPTH.drl  GitKop-PTH.drl  GitKop-job.gbrjob  GitKop.kicad_pcb  GitKop.kicad_prl  GitKop.kicad_pro  GitKop.kicad_sch  GitKop.step  sym-lib-table
doc/: .gitignore  Abstrakt_en.tex  Abstrakt_pl.tex  Oznaczenia.tex  PracaInz.tex  Przeglad.tex  Symbole.tex  budowa.tex  pcb.tex  pginz.cls  podsumowanie.tex  prez.tex  przeglad.tex  testy.tex  wstep.tex
doc/bib/: 10824231.bib  2015AIPC.1656d0010W.bib  64003-upon-the-electrical-experiments-to-determine-the-location-of-the-bullet-in-the-body-of-the-late-president-garfield-and-upon-a-successful-form-of-indu.bibtex.txt  9104753.bib  Dove1841.bib  Electromagnetics_Explained.bibtex  Mazurek_Wdowiak_2015.bib  Primo_BibTeX_Export.bib  alternator.bib  board.bib  carl_bfo.bib  citation-2984608.bib  enwiki:1247591717.bib  enwiki:1253721450.bib  griffiths1999introduction.bib  handbook_of_chemistry.bib  irf740.bib  kicad.bib  kraus1999electromagnetics.bib  lf33cv_ds.bib  mcp6281_ds.bib  minelab-blog.bib  moreland2024inside.bib  moreland_coils.bib  moreland_induction.bib  pi_performance.bib  rsj_rspl29_ix.bib  rsj_rstl120_1.bib  saperzy_jpg.bib  sensors-v11-i03_20251120.bib  skin_effect_svg.bib  soil_properties.bib  st_stm32h533_ds.bib  stm32h523_page.bib
doc/budowa/: Obudowa.tex  PCB.tex  SekcjaCyfrowa.tex  SekcjaNadawcza.tex  SekcjaOdbiorcza.tex  Sonda.tex  Zasilanie.tex
doc/przeglad/: Dyfuzja.tex  Elektrodynamika.tex  Indukcja.tex  PorownawczaArchitektur.tex  Sondy.tex
doc/testy/: AnalizaSkutecznosci.tex  OprogramowaniePomocnicze.tex  TestDzialania.tex
edf/: main.py
gitkop-bluepill/: .ccls
gitkop-esp32/: compile_commands.json  platformio.ini
gitkop-esp32/src/: main.cpp
gitkop001/: .editorconfig  .mxproject  CMakeLists.txt  cmake_install.cmake  compile_commands.json  gitkop001.ioc
gitkop001/Core/Inc/: GitKop.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  tim.h
gitkop001/Core/Src/: GitKop.c  adc.c  ema.h  gpdma.c  gpio.c  main.c  spi.c  ssd1306.c  ssd1306.h  ssd1306_fonts.c  ssd1306_fonts.h  stm32h5xx_it.c  tim.c  usart.c
measurements/: coil_response.toml  pulse_out.toml
nucleo-f411re/: nucleo-f411re.ioc  platformio.ini  stm32pio.ini
nucleo-f411re/Inc/: GitKop.h  main.h  tim.h
nucleo-f411re/Inc/ili9341/: ili9341.h
nucleo-f411re/Src/: GitKop.c  adc.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
nucleo-f411re/Src/ili9341/: ili9341.c  ili9341_font_manop.c  ili9341_font_spleen.c  ili9341_font_terminus.c
plot/: coil_response.toml
plotter/: main.py  serial_manager.py  test.py  visualizers.py
